03.kubernetes/traefik/traefik-dashboard.yaml
## traefik dashboard
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-route
  namespace: kube-system
spec:
  entryPoints: 
    - web
  routes:
    - match: Host(`traefik-dashboard.k8s.lcom`) && PathPrefix(`/`)
      kind: Rule
      service:
        - name: traefik
          port: 8080
